src/objects/Saved_URL__c.object
<CustomObject>
    <fields>
        <fullName>OAuth_Service__c</fullName>
        <label>OAuth Service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>Saved URLs</relationshipLabel>
        <relationshipName>Saved_URLs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <label>body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isform__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is form URL encoded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <externalId>true</externalId>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Saved URL</label>
    <nameField>
        <label>Saved URL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved URLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>